Fix BaseSourceSwitcher dropdown covered by other elements in multi-row toolbar

--- a/src/Mapbender/CoreBundle/Resources/public/sass/element/basesourceswitcher.scss
+++ b/src/Mapbender/CoreBundle/Resources/public/sass/element/basesourceswitcher.scss
@@ -10,6 +10,8 @@
   .toolBarItem & {
     // Reset toolbar text alignment (vs .itemsRight / .itemsCenter)
     text-align: left;
+    position: relative;
+    z-index: 1;
     .state-check {
       display: none;
     }
